Version 1.2.4 - 25/12/2018
==========================

1. Make installer distribution.
2. Open last used project on startup option.
3. Fixed flyby dialog exception.
4. Highlight current flyby camera.
5. Fix NG meshswap flipeffect parameters.
6. Add room autoswitch feature.
7. Make dark rectangular text overlay optional.

Version 1.2.3 - 02/12/2018
==========================

1. Added basic undo/redo.
2. New way to assign custom transform/light effects to rooms.
3. Allow selecting objects in any visible rooms.
4. Added "Cut" command (Ctrl+X).
5. Added command search in keyboard layout.
6. Rotate texture on whole floor/ceiling block with ctrl+shift+click.
7. Added dark overlay for text in 3D label to increase readability.
8. Improved resize room, trigger and flyby camera windows.
9. Selection-based sector diagonal split flip and rotation.
10. Fixed non-NG flipeffects (e.g. fog bulb color flipeffect).
11. Fix issue with climbable walls highlight.
12. Improved texture packing.
13. Improved floordata hash packing.
14. Fixed TR XML catalog.
15. Fixed portals compilation.
16. Fixed legacy flipeffect timer.

Version 1.2.1 - 12/11/2018
==========================
1. Eliminate half-pixel texture correction and allow easy seamless texturing.
2. Fix many issues with triangle texturing on diagonal steps and portals.
3. Fix wrong portal coordinates which sometimes resulted in flickering and wrong occlusion.
4. Fix potential problems with renderer which could have caused editor crashes and garbage on textures.
5. Fix issue with hidden static mesh color picker.
6. Fix selection tile size option which wasn't saved before, also use default selection tile size in anim textures window.
7. Allow smooth edit through portals.
8. Single-block diagonal arrow smooth editing now works like winroomedit.
9. Update trcatalog.xml with several system sounds which were missing.