@@ -8,6 +8,7 @@ Version 1.2.4 - 25/12/2018
 5. Fix NG meshswap flipeffect parameters.
 6. Add room autoswitch feature.
 7. Make dark rectangular text overlay optional.
+8. Ability to move objects from one room to another (context menu or hotkey).
 
 Version 1.2.3 - 02/12/2018
 ==========================
